# plazma.io

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile
.github/workflows/: ci.yml  release.yml
Plazma/: CMakeLists.txt  Makefile  README.md  version.h.in
Plazma/.devcontainer/: Dockerfile  devcontainer.json
Plazma/cmake/: packaging.cmake
Plazma/packaging/: PKGBUILD  dev.gearonixx.plazma.desktop  dev.gearonixx.plazma.metainfo.xml
Plazma/src/: api.cpp  api.h  application.cpp  application.h  basic_types.h  client.cpp  client.h  detail.h  main.cpp  resources.qrc  rpc-client.cpp  rpc-client.h  session.cpp  session.h  settings.cpp  settings.h  utils.cpp  utils.h
Plazma/src/controllers/: pageController.cpp  pageController.h  systemController.cpp  systemController.h
Plazma/src/core/: fatal.cpp  fatal.h  file_utilities.cpp  file_utilities.h  osSignalHandler.cpp  osSignalHandler.h
Plazma/src/core/controllers/: coreController.cpp  coreController.h
Plazma/src/locales/: locales.qrc.in  ru.ts
Plazma/src/models/: auth_code_model.cpp  auth_code_model.h  downloads_model.cpp  file_dialog_model.cpp  file_dialog_model.h  language_model.cpp  language_model.h  phone_number_model.cpp  phone_number_model.h  playlists_model.cpp  playlists_model.h  settings_model.cpp  settings_model.h  user_model.cpp  user_model.h  video_feed_model.cpp  video_feed_model.h
Plazma/src/platform/: file_dialog.cpp  file_dialog.h
Plazma/src/storage/: download_paths.cpp  prepare.cpp  prepare.h  task_queue.cpp  task_queue.h
Plazma/src/ui/: main.qml  mpv_object.cpp  mpv_object.h
Plazma/src/ui/Boxes/: SettingsBox.qml
Plazma/src/ui/Controls/: BasicButtonType.qml  NavBar.qml
Plazma/src/ui/Modules/Style/: PlazmaStyle.qml  qmldir
Plazma/src/ui/Modules/Td/: TdPalette.qml  TdTheme.qml
Plazma/src/ui/Pages/: PageFeed.qml  PageLogin.qml  PageProfile.qml  PageStart.qml
Plazma/src/validators/: user_login_validator.cpp
PlazmaServer/: .env.example  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
PlazmaServer/.devcontainer/: devcontainer.json
PlazmaServer/.github/: pull_request_template.md
PlazmaServer/.github/ISSUE_TEMPLATE/: 0-default.yml
PlazmaServer/.github/workflows/: ci.yml  docker.yaml
PlazmaServer/configs/: config.yaml  config_vars.docker.yaml  config_vars.testsuite.yaml  config_vars.yaml
PlazmaServer/dev/users/: user_get.cpp  user_get.hpp  user_put.hpp  users.cpp  users.hpp  users_login.cpp
PlazmaServer/docs/: api.yaml  playlists.md
PlazmaServer/migrations/: 001_init.cql  002_add_user_fields.cql  004_video_tables.cql  005_playlist_tables.cql
PlazmaServer/postgresql/schemas/: db-1.sql
PlazmaServer/src/: main.cpp
PlazmaServer/src/handlers/: common.cpp  common.hpp
PlazmaServer/src/handlers/playlists/: by_video.cpp  by_video.hpp  create.cpp  create.hpp  delete.cpp  delete.hpp  detail.cpp  detail.hpp  item_add.cpp  item_add.hpp  item_remove.cpp  item_remove.hpp  items_list.cpp  items_list.hpp  list.cpp  list.hpp  playlists_common.cpp  playlists_common.hpp  rename.cpp  rename.hpp
PlazmaServer/src/handlers/user/: auth_login.cpp  auth_login.hpp  user_ping.cpp  user_ping.hpp
PlazmaServer/src/handlers/videos/: my_videos.cpp  my_videos.hpp  video_create.cpp  video_create.hpp  video_delete.cpp  video_delete.hpp  video_get.cpp  video_get.hpp  video_list.cpp  video_view.cpp  video_view.hpp
PlazmaServer/src/s3/: component.cpp  component.hpp
PlazmaServer/src/search/: es_component.cpp
PlazmaServer/src/utils/: auth.hpp  errors.hpp  jwt.cpp  jwt.hpp  make_error.cpp  playlist.cpp  playlist.hpp  slugify.cpp  slugify.hpp  thumbnail.cpp  thumbnail.hpp  video.hpp
PlazmaServer/src/validators/: login_validator.cpp  login_validator.hpp
PlazmaServer/unused/articles/: articles_favorite.cpp  articles_favorite.hpp  articles_get.cpp  articles_get.hpp  articles_post.cpp  articles_post.hpp  articles_slug_delete.cpp  articles_slug_delete.hpp  articles_slug_get.cpp  articles_slug_get.hpp  articles_slug_put.cpp  articles_slug_put.hpp  articles_unfavorite.cpp  articles_unfavorite.hpp  feed_articles.cpp  feed_articles.hpp
PlazmaServer/unused/auth/: auth_bearer.cpp  auth_bearer.hpp
PlazmaServer/unused/cache/: articles_cache.cpp  articles_cache.hpp  comments_cache.cpp  comments_cache.hpp
PlazmaServer/unused/comments/: comment_delete.cpp  comment_delete.hpp  comment_post.cpp  comment_post.hpp  comments_get.cpp  comments_get.hpp
PlazmaServer/unused/db/: add_comment.sql  create_article.sql  decrement_favorites_count.sql  delete_article_by_slug.sql  delete_comment_by_id.sql  delete_favorite_pair.sql  find_comment_by_id_and_slug.sql  find_id_article_by_slug.sql  find_user_by_id.sql  find_user_id_by_username.sql  following_user.sql  get_article_id_by_slug.sql  get_article_with_author_profile.sql  get_article_with_author_profile_by_slug.sql  get_profile_by_username.sql  get_salt_by_email.sql  increment_favorites_count.sql  insert_favorite_pair.sql  insert_user.sql  select_cached_comments.sql  select_full_article_info.sql  select_user_by_email_and_password.sql  sql.hpp  un_following_user.sql  update_article_by_slug.sql  update_user.sql
PlazmaServer/unused/dto/: article.cpp  article.hpp  comment.cpp  comment.hpp  filter.cpp  filter.hpp
PlazmaServer/unused/models/: article.cpp  article.hpp  comment.cpp  comment.hpp  profile.hpp  user.cpp  user.hpp
PlazmaServer/unused/profiles/: profiles.cpp  profiles.hpp  profiles_follow.cpp  profiles_follow.hpp  profiles_follow_delete.cpp  profiles_follow_delete.hpp
PlazmaServer/unused/tags/: tags.cpp  tags.hpp
PlazmaServer/unused/users/: user_get.cpp  user_put.cpp  users.cpp  users_login.cpp
PlazmaServer/unused/utils/: errors.hpp  jwt.cpp  make_error.hpp  random.cpp  random.hpp  slugify.cpp  slugify_test.cpp
PlazmaServer/unused/validators/: article_validators.cpp  length_validator.cpp  length_validator.hpp  user_validators.cpp  validator_test.cpp  validators.cpp  validators.hpp
